--- a/401.html
+++ b/401.html
@@ -9,18 +9,18 @@
         <title>Authentication Required</title>
         <meta name="viewport" content="width=device-width">
         <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-        <link href="https://jcplaboratory.github.io/http_error-pages-nginx/css/bootstrap.min.css" rel="stylesheet" type="text/css">
-        <link rel="stylesheet" type="text/css" href="https://jcplaboratory.github.io/http_error-pages-nginx/css/style.css">
+        <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css">
+        <link rel="stylesheet" type="text/css" href="css/style.css">
         <!--Action js here-->
-        <script type="text/javascript" src="https://jcplaboratory.github.io/http_error-pages-nginx/js/redirect.js"></script>
+        <script type="text/javascript" src="js/redirect.js"></script>
      
     </head>
     <body onload="countdown(30);">
     	<nav class="navbar navbar-default">
   			<div class="container-fluid">
    				<div class="navbar-header">
-      				<a class="navbar-brand" href="http://jcplaboratory.org">
-       					 <img alt="Logo" class="brand" src="https://jcplaboratory.github.io/http_error-pages-nginx/img/nav-banner_ra_large.png">
+      				<a class="navbar-brand" >
+       					 <img alt="Logo" class="brand" src="img/nav-banner_ra_large.png">
       				</a>
     			</div>
   			</div>
@@ -32,7 +32,7 @@
         <!-- Add your site or application content here -->
         <article class="col-md-12 text-center main-content">
         	<div class="image">
-        		<img src="https://jcplaboratory.github.io/http_error-pages-nginx/img/server.svg" alt="Image">
+        		<img src="img/server.svg" alt="Image">
         	</div>
         	<div class="content">
         		<div class="main-text">
@@ -48,7 +48,7 @@
                     <p>401</p>
                 </div>
         		<div class="action">
-        			<p><img src="https://jcplaboratory.github.io/http_error-pages-nginx/img/ajax-loader.gif"> Redirecting in <span id="countdown"/></p>
+        			<p><img src="img/ajax-loader.gif"> Redirecting in <span id="countdown"/></p>
         		</div>
         	</div>
         </article>
@@ -56,7 +56,7 @@
 
 		<!--Footer-->
 		<div class="footer">
-			<p>&copy; 2019 J.C.P Laboratory</p>
+			<p>&copy; 2020 irradia.app</p>
 		</div>
 		<!--/.Footer-->
                 
